--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -29,7 +29,7 @@ body {
   background-color: _palette(bg);
 
   background-image: linear-gradient(to top, transparentize(_palette(bg-header), 0.2), transparentize(_palette(bg-header), 0.2)),
-  url('../../img/backgrounds/bg.jpg');
+  url('../../img/backgrounds/bg.png');
 
   background-size: auto,
   cover;
