--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -47,11 +47,11 @@ $palette: (
         bg-header:#464646,
         bg-menu:#928f8c,
         bg-post: #fff,
-        bg-spotlight:#e37c30,
+        bg-spotlight:#055259,
         //bg-spotlight:#e7904b,
         bg-section2:#f7d1a7,
         bg-section3:#e7904b,
-        fg: #011627,
+        fg: #000000,
         fg-bold: #011424,
         fg-light: rgba(24, 43, 58, 0.35),
         fg-header:#fff,
@@ -68,7 +68,7 @@ $palette: (
         
         light_orange: #f7d1a7,
         orange: #e7904b,
-        dark_orange: #e37c30,
+        dark_orange: #055259,
         light_grey: #928f8c,
         grey: #635f5a,
         dark_grey: #464646,
