--- a/css/ie9.scss
+++ b/css/ie9.scss
@@ -18,7 +18,7 @@
 
 body {
   background-color: _palette(bg);
-  background-image: url('../../img/backgrounds/bg.jpg');
+  background-image: url('../../img/backgrounds/bg.png');
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
