--- a/_sass/layout/_wrapper.scss
+++ b/_sass/layout/_wrapper.scss
@@ -47,7 +47,7 @@
       background-color: _palette(bg);
 
       background-image: linear-gradient(to top, transparentize(_palette(bg), 0.8), transparentize(_palette(bg), 0.8)),
-      url('../../img/backgrounds/bg.jpg');
+      url('../../img/backgrounds/bg.png');
 
       background-size: auto,
       cover;
