--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 <!--suppress ALL -->
 <html>
 <head>
+    {% include head.html %}
+    {% seo %}
+     <meta name="google-site-verification" content="qKIepgVfzSjcseO976kK4sD1NfV8NUlc3eYal6GV0Fo">
+
     {% include header-default-meta.html %}
 
     {% if page.layout == 'post' %}
