--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,7 @@
 <html>
 <head>
     {% include head.html %}
-    {% seo %}
-     <meta name="google-site-verification" content="qKIepgVfzSjcseO976kK4sD1NfV8NUlc3eYal6GV0Fo">
+
 
     {% include header-default-meta.html %}
 
@@ -45,6 +44,10 @@
     {% endif %}
 
     {% include header-styles-scripts.html %}
+
+    {% seo %}
+     <meta name="google-site-verification" content="rX80efOvSS4vHZoe_fsa-JiHFZbYYM2C-i-ka3qusZw" />
+
 </head>
 
 <body>
