--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,20 @@
 <!--suppress ALL -->
 <html>
 <head>
+
+<!--Google Analytics Data -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143539370-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143539370-1');
+</script>
+
+<!--End of Google Analytics Data -->
+
     {% include header-default-meta.html %}
 
     {% if page.layout == 'post' %}
