--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -40,6 +40,11 @@
 {% include analytics.html %}
 {% endif %}
 <!-- End of Google Analytic Data -->
+
+<!-- Google Site Verification Data -->
+<meta name="google-site-verification" content="qKIepgVfzSjcseO976kK4sD1NfV8NUlc3eYal6GV0Fo">
+<!-- End of Google Site Verification Data -->
+
 </head>
 
 <body>
