--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,10 @@
 {% endif %}
 <!-- End of Google Analytic Data -->
 
+<!-- Google Site Verification Data -->
+<meta name="google-site-verification" content="qKIepgVfzSjcseO976kK4sD1NfV8NUlc3eYal6GV0Fo">
+<!-- End of Google Site Verification Data -->
+
 <!-- Page Wrapper -->
 </head>
 
