--- a/_layouts/linuxtutes.html
+++ b/_layouts/linuxtutes.html
@@ -20,6 +20,11 @@
     <meta property="og:image" content="https://digitalave.github.io{{ page.image }}"/>
 
     {% include header-styles-scripts.html %}
+
+<!-- Google Site Verification Data -->
+<meta name="google-site-verification" content="qKIepgVfzSjcseO976kK4sD1NfV8NUlc3eYal6GV0Fo">
+<!-- End of Google Site Verification Data -->
+
 </head>
 
 <body>
