--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,7 @@ layout: default
     <div class="inner" style="text-align: left;">
         <div class="content">
             {{ content }}
+            {% include addthis.html %}
             {% include disqus.html %}
         </div>
     </div>
