--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 <!--Google Analytics Data -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143539370-1"></script>
+<meta name="google-site-verification" content="oMW08c5_7JrOPMkkYu_EuMOnRNwGTbAHGIFQ9newbRE" />
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
