--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -7,7 +7,8 @@
  * Syntax highlighting styles
  */
 .highlight {
-  background: #FFFFFF;
+  #background: #FFFFFF;
+  background: #000000;
   color: #929292;
 
   .bp    { color: #545454; } // Name.Builtin.Pseudo
