--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -9,7 +9,7 @@
 .highlight {
   #background: #FFFFFF;
   background: #000000;
-  color: #929292;
+  color: #FFFFFF;
 
   .bp    { color: #545454; } // Name.Builtin.Pseudo
   .c     { color: #929292; font-style: italic; } // Comment
