--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -8,8 +8,8 @@
  */
 .highlight {
   #background: #FFFFFF;
-  background: #000000;
-  color: #FFFFFF;
+  background: #FFFFFF;
+  color: #000000;
 
   .bp    { color: #545454; } // Name.Builtin.Pseudo
   .c     { color: #929292; font-style: italic; } // Comment
