--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -9,7 +9,7 @@
 .highlight {
   #background: #FFFFFF;
   background: #FFFFFF;
-  color: #000000;
+  color: #7f7f7f;
 
   .bp    { color: #545454; } // Name.Builtin.Pseudo
   .c     { color: #929292; font-style: italic; } // Comment
