--- a/_includes/header-navigation-banner.html
+++ b/_includes/header-navigation-banner.html
@@ -29,7 +29,7 @@
     </nav>
 
     <section id="banner">
-        <img src="{{ site.baseurl }}/img/jworks/Digital_Avenue.jpg" width="100%" />
+        <img src="{{ site.baseurl }}/img/jworks/Digital_Avenue.png" width="100%" />
         <header>
             <div class="inner">
                 {% if page.show_logo %}
