--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -8,8 +8,8 @@
  */
 .highlight {
   #background: #FFFFFF;
-  background: #FFFFFF;
-  color: #7f7f7f;
+  background: #000000f0;
+  #color: #c9d2e2;
 
   .bp    { color: #545454; } // Name.Builtin.Pseudo
   .c     { color: #929292; font-style: italic; } // Comment
