--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -375,7 +375,7 @@ body.custom-image {
 @media (prefers-color-scheme: dark) {
   body .wrapper.spotlight.post-body {
     color: #ddd;
-    background-color: #222;
+    background-color: #2b2d2fcf;
     border-top: solid #222;
     border-bottom: solid #222;
 
