--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -52,7 +52,7 @@ $palette: (
         bg-section2:#f7d1a7,
         bg-section3:#e7904b,
         fg: #000000,
-        fg-bold: #3182c6,
+        fg-bold: #79daff,
         fg-light: rgba(24, 43, 58, 0.35),
         fg-header:#fff,
         //fg-header-light:#bdb9b6,
