--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,16 @@
 </script>
 
 <!--End of Google Analytics Data -->
+  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4QYWXRYV84"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4QYWXRYV84');
+</script>
 
     {% include header-default-meta.html %}
 
